--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="./img/tony.mp4" type="video/mp4">
+        <source src="./tony.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     <header>
