--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="./tony.mp4" type="video/mp4">
+        <source src="tony.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     <header>
@@ -20,7 +20,7 @@
             </div>
 
             <div class="logo" align="right" >
-                <img src="img/ANKOSTUPID (1).png" alt="TonyTech Logo">
+                <img src="ANKOSTUPID (1).png" alt="TonyTech Logo">
             </div>
            
         <div class="nav-links">
@@ -53,7 +53,7 @@
                     <p>TonyTech is dedicated to providing innovative software solutions that empower businesses to thrive in the digital age.
                 <br> Click <a href="about.html" id="more">here</a> to learn more about our services.</p>
                 </div>
-                <img src="./img/ANKOSTUPID.png" alt="TonyTech Logo" class="tony-image">
+                <img src="ANKOSTUPID.png" alt="TonyTech Logo" class="tony-image">
             </div>
             </div>
             <section class="services">
