--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="./img/tony.mp4" type="video/mp4">
+        <source src="tony.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
     <header>
@@ -20,7 +20,7 @@
             </div>
 
             <div class="logo" align="right" >
-                <img src="img/ANKOSTUPID (1).png" alt="TonyTech Logo">
+                <img src="ANKOSTUPID (1).png" alt="TonyTech Logo">
             </div>
            
         <div class="nav-links">
