--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <marquee class="marquee" behaviour="Alternative"> <h1>Welcome to TonyTech.co</h1>
             <p>Your partner in software development.</p></marquee>
             <div class="ceo-container" id="ceo-container">
-                <img src="img/ME.jpg" alt="CEO of TonyTech" class="ceo-image">
+                <img src="ME.jpg" alt="CEO of TonyTech" class="ceo-image">
                 <div class="ceo-description">
                     <h2>Meet Our CEO</h2>
                     <p>Antony Kariuki is a young visionary leader with innovative ideas in software development and project management. 
